--- a/style.css
+++ b/style.css
@@ -12,14 +12,16 @@
         align-items: center;
         min-height: 100vh;
         padding: 20px;
+        background-image: url(./images/img2.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        backdrop-filter: blur(5px);
     }
 
     .container {
-        background: white;
-        border-radius: 10px;
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-        padding: 30px;
-        max-width: 500px;
+        max-width: 600px;
         text-align: center;
         width: 100%;
     }
@@ -31,8 +33,8 @@
     }
 
     .container p {
-        font-size: 1rem;
-        color: #36393b;
+        font-size: 1.2rem;
+        color: #000000;
         margin-bottom: 20px;
     }
 
@@ -92,19 +94,14 @@
     .btn {
         display: inline-block;
         color: white;
-        padding: 10px 20px;
+        padding: 10px 100px;
         border: none;
         border-radius: 5px;
         font-size: 1rem;
         cursor: pointer;
         transition: background-color 0.3s;
-        background: linear-gradient(45deg, #6366F1, #A78BFA);
+        background: #007bff;
         transition: all 0.3s ease;
-    }
-
-    .btn:hover {
-        background: linear-gradient(45deg, #4338CA, #7C3AED);
-        box-shadow: 0 4px 10px rgba(67, 56, 202, 0.3);
     }
 
     @media (max-width: 576px) {
